# error-server

./: LICENSE  README.md  error-server.cabal
src/: Main.hs  StaticApp.hs
