name:                error-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/error-server#readme
license:             MIT
license-file:        LICENSE
author:              MichaeGon
maintainer:          lo.nix@gmail.com
copyright:           2018 MichaeGon
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable error-server
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       StaticApp
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, async, warp, warp-tls, wai, wai-app-static, wai-extra, bytestring, http-reverse-proxy, http-client, http-client-tls, text, mime-types, http-date, http-types
